BB-1330: Fix overlapping feedback fields (#237)
* Fix overlapping feedback fields

--- a/problem_builder/public/css/questionnaire.css
+++ b/problem_builder/public/css/questionnaire.css
@@ -64,7 +64,8 @@
     position: relative;
     overflow-y: auto;
     line-height: normal;
-    max-height: 180px;
+    max-height: 100px;
+    margin: 5px 0;
 }
 
 .mentoring .questionnaire .choice-tips p,
